--- a/package.json
+++ b/package.json
@@ -3,32 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.13",
-    "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "clsx": "^1.1.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-scripts": "3.4.1",
-    "recharts": "^1.8.5",
-    "redux": "^4.0.5"
+    "@material-ui/core": "4.9.13",
+    "@material-ui/icons": "4.9.1",
+    "clsx": "1.1.0",
+    "prop-types": "15.7.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-redux": "7.2.0",
+    "recharts": "1.8.5",
+    "redux": "4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "postinstall": "ln -sf `pwd`/githooks/* .git/hooks || true",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build"
   },
   "homepage": ".",
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -42,6 +36,40 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0"
+    "@babel/cli": "7.8.4",
+    "@babel/core": "7.9.6",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "7.9.6",
+    "@babel/plugin-proposal-optional-chaining": "7.9.0",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/plugin-transform-runtime": "7.9.6",
+    "@babel/preset-env": "7.9.6",
+    "@babel/preset-react": "7.9.4",
+    "@hh.ru/babel-plugin-react-source": "0.1.1",
+    "@hh.ru/eslint-config": "8.0.1",
+    "@hh.ru/stylelint-config-hh": "3.0.0",
+    "@testing-library/dom": "7.5.1",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.5.0",
+    "@testing-library/user-event": "7.2.1",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-import-resolver-webpack": "0.12.1",
+    "eslint-plugin-babel": "5.3.0",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-prettier": "3.1.3",
+    "eslint-plugin-react": "7.19.0",
+    "gh-pages": "2.2.0",
+    "lint-staged": "10.2.2",
+    "prettier": "2.0.5",
+    "react-scripts": "3.4.1",
+    "stylelint": "11.0.0",
+    "stylelint-config-prettier": "8.0.1",
+    "stylelint-order": "3.1.1",
+    "stylelint-prettier": "1.1.2",
+    "stylelint-scss": "3.11.1",
+    "stylelint-value-list-box-shadow-inset-first": "2.0.1",
+    "typescript": "3.8.3",
+    "webpack": "4.43.0"
   }
 }
