--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "4.9.13",
     "@material-ui/icons": "4.9.1",
     "clsx": "1.1.0",
+    "core-js": "3.6.5",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -72,6 +73,7 @@
     "eslint-plugin-babel": "5.3.0",
     "eslint-plugin-flowtype": "4.6.0",
     "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-jest": "23.10.0",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-react": "7.19.0",
