--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "postinstall": "ln -sf `pwd`/githooks/* .git/hooks || true",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "deploy": "yarn build && gh-pages -d build"
   },
   "homepage": ".",
   "browserslist": {
