--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@material-ui/core": "4.9.13",
     "@material-ui/icons": "4.9.1",
-    "clsx": "1.1.0",
+    "classnames": "2.2.6",
     "core-js": "3.6.5",
     "final-form": "4.19.1",
     "prop-types": "15.7.2",
