--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@date-io/date-fns": "1.x",
     "@material-ui/core": "4.9.13",
     "@material-ui/icons": "4.9.1",
+    "@material-ui/lab": "4.0.0-alpha.53",
     "@material-ui/pickers": "3.2.10",
     "classnames": "2.2.6",
     "core-js": "3.6.5",
