--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "1.x",
     "@material-ui/core": "4.9.13",
     "@material-ui/icons": "4.9.1",
+    "@material-ui/pickers": "3.2.10",
     "classnames": "2.2.6",
     "core-js": "3.6.5",
+    "date-fns": "2.13.0",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
